# GraviTrax-Connect

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.de.md  README.md  pyproject.toml
Applications/: README.txt  requirements.txt
Applications/CLI_Application/: README.md  gravitrax_cli.py  requirements.txt
Applications/GUI_Application/: GravitraxGUI.drawio  README.md  gravitrax_gui.py  gravitrax_gui.pyw  gravitraxcon_presets.json  requirements.txt
Applications/RaspberryPi_GPIO/: README.md  gravitrax_gpio.py  requirements.txt
Applications/ReactionGame/: README.md  example_reaction_game.py  requirements.txt
Applications/Timer/: README.md  gravitrax_timer.py  requirements.txt
GraviTrax Connect Library Bleak/: README.md
GraviTrax Connect Library Bleak/docs/: How to use the GravitraxConnect Library.md
GraviTrax Connect Library Bleak/examples/: example_bridge_mode.py  example_notification.py  example_scan.py  example_send_bytes.py  example_services.py  (+1 more)
GraviTrax Connect Python Library/: CHANGES.md  LICENSE.txt  MANIFEST.in.txt  README.md  pyproject.toml
GraviTrax Connect Python Library/examples/: example_bridge_id.py  example_bridge_infos.py  example_check_connection.py  example_connect_mac.py  example_disconnect_callback.py  example_disconnect_timeout.py  example_logging.py  example_signal_repeater.py  example_signal_spam.py
GraviTrax Connect Python Library/gravitraxconnect/: gravitrax_bridge.py  gravitrax_constants.py
GraviTrax Connect Python Library/tests/: function_tests.py
GraviTrax-Connect-Python-Library/: CHANGES.md  LICENSE.txt  MANIFEST.in.txt  pyproject.toml
(+23 files in other folders)
